# stone_clay_ros

./: .gitignore  CMakeLists.txt  README.md  dependencies.repos  package.xml  ros_install.yaml
launch/: bringup.launch  bringup_collect.launch  bringup_fabricate.launch  record.launch  visualize.launch
