<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>stone_clay_ros</name>
  <version>0.0.0</version>
  <description>The stone_clay_ros package</description>
  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="tetov@todo.todo">tetov</maintainer>
  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/stone_clay_ros</url> -->
  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <depend>roscpp</depend>
  <depend>rospy</depend>

  <exec_depend>rosbridge_suite</exec_depend>
  <exec_depend>compas_rrc_driver</exec_depend>
  <exec_depend>abb_irb4600_40_255_moveit_config</exec_depend>
  <exec_depend>file_server</exec_depend>
  <exec_depend>depthai</exec_depend> <!-- luxonis -->
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>axis_camera</exec_depend>
  <exec_depend>abb_rws_service_provider</exec_depend>
  <exec_depend>abb_rws_state_publisher</exec_depend>
  <exec_depend>abb_robot_bringup_examples</exec_depend>
  <exec_depend>aruco_detect</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
